[F] Complete stub viewer view

--- a/public/view.html
+++ b/public/view.html
@@ -4,10 +4,12 @@
     <title>
         Tandygram!
     </title>
+
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 
 <body>
-<svg id="tandy-svg" width="1024" height="768" style="border: 2px solid hotpink"></svg>
+<svg id="tandy-svg" class="tandy-view" width="1024" height="768" style="border: 2px solid hotpink"></svg>
 
 <br/>
 <button data-button-save>Save</button>
