[F] Save tandys to the db and play them in view

--- a/public/draw.html
+++ b/public/draw.html
@@ -15,9 +15,7 @@
         <svg id="tandy-svg" class="tandy-draw"></svg>
 
         <br/>
-        <button data-button-save>Save</button>
-
-        <textarea id="jsonOut" style="display: block; width: 500px; height: 200px; margin-top: 20px;" placeholder="Shape output will go here"></textarea>
+        <button class="save-button" data-button-save>Save</button>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.6/hammer.min.js"></script>
