--- a/public/view.html
+++ b/public/view.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<svg id="tandy-svg" class="tandy-view" width="1024" height="768" style="border: 2px solid hotpink"></svg>
+<svg id="tandy-svg" class="tandy-view"></svg>
 
 <br/>
 <button data-button-save>Save</button>
