[F] Push layer data when app saves
This commit also adds logic to refresh the shape data from the backend
when the viewer reaches the end of a cycle.

--- a/public/draw.html
+++ b/public/draw.html
@@ -5,6 +5,7 @@
             Tandygram!
         </title>
 
+        <link href='https://fonts.googleapis.com/css?family=Megrim|Roboto:300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="styles.css"/>
         <!-- multi-touch event firing helper for testing on desktop -->
         <script src="lib/touch-emulator.js"></script>
