--- a/public/view.html
+++ b/public/view.html
@@ -5,16 +5,12 @@
         Tandygram!
     </title>
 
+    <link href='https://fonts.googleapis.com/css?family=Megrim|Roboto:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 
 <body>
 <svg id="tandy-svg" class="tandy-view"></svg>
-
-<br/>
-<button data-button-save>Save</button>
-
-<textarea id="jsonOut" style="display: block; width: 500px; height: 200px; margin-top: 20px;" placeholder="Shape output will go here"></textarea>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
 <script type="text/javascript" src="shape-generators.js"></script>
