[F] Add script to change tandy name
[FEATURE https://github.com/castiron/tandygram/issues/5]
This adds a DOM element for the tandy title and a script to swap
the title during the viewer transition. Note that this is unstyled
so as not to cause merge conflicts with a forthcoming style push.

--- a/public/view.html
+++ b/public/view.html
@@ -11,6 +11,7 @@
 
 <body>
 <svg id="tandy-svg" class="tandy-view"></svg>
+<header class="tandy-title" id="tandy-title">&nbsp;</header>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
 <script type="text/javascript" src="shape-generators.js"></script>
