--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
             Tandygram!
         </title>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="white">
+        <link rel="apple-touch-icon" sizes="152x152" href="icon.png">
         <link href='https://fonts.googleapis.com/css?family=Megrim|Roboto:300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="styles.css"/>
         <!-- multi-touch event firing helper for testing on desktop -->
