[F] Add png close button and disable multi-drag
[FEATURE] Using a pnng for the close button instead of a unicode character because the ipad browser wasn't displaying it properly

[BUGFIX] Add condition to the function that sets the active shape that prohibits resetting the active shape if any shape is still rotating

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
           <!-- Modal content -->
           <div class="modal-content">
             <div href="#" class="tandy-logo-stacked"></div>
-            <span class="close" data-button-modal-close>&#10006;</span>
+            <img src="/public/buttonClose.png" class="close" alt="X" data-button-modal-close>
             <p>Tandygram is a <a href="http://designweekportland.com" target="_blank">Design Week Portland</a> installation encouraging playfulness, shapliness, and creating under geometric constraints.  Designed, built, and executed by your business friends at <a href="http://www.castironcoding.com" target="_blank">Cast Iron Coding</a></p>
             <a href="http://www.castironcoding.com" class="cic-logo"></a>
           </div>
