--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,9 @@
 
         </div>
         <footer class="page-footer">
+            <button class="button reset-button" data-button-reset>reset</button>
             <a href="#" class="tandy-logo" data-button-modal-open></a>
-            <button class="save-button" data-button-save>save</button>
+            <button class="button save-button" data-button-save>save</button>
         </footer>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
