--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,10 @@
           <div class="modal-content">
             <div href="#" class="tandy-logo-stacked"></div>
             <img src="/public/buttonClose.png" class="close" alt="X" data-button-modal-close>
-            <p>Tandygram is a <a href="http://designweekportland.com" target="_blank">Design Week Portland</a> installation encouraging playfulness, shapliness, and creating under geometric constraints.  Designed, built, and executed by your business friends at <a href="http://www.castironcoding.com" target="_blank">Cast Iron Coding</a></p>
+            <p>Tandygram is a <a href="http://designweekportland.com" target="_blank">Design Week Portland</a> installation that invites
+            its users to rediscover the playful creativity that comes from forming simple designs within a set of basic geometric
+            constraints. It was designed, built, and executed by your business friends at <a href="http://www.castironcoding.com" target="_blank">Cast Iron Coding</a>.
+            </p>
             <a href="http://www.castironcoding.com" class="cic-logo"></a>
           </div>
 
